--- a/192/index.html
+++ b/192/index.html
@@ -939,7 +939,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org13b800a">
+<table id="orgfde0603">
 
 
 <colgroup>
@@ -1157,86 +1157,93 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">1</td>
-<td class="org-left">苏大明</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">4</td>
 <td class="org-left">陈梓鑫</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">29</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">叶宇</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">麦天河</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">30</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
-<td class="org-left">王海波</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">卢德涛</td>
+<td class="org-right">31</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">饶展源</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">沈艺宏</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">刘翔</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">周永久</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">32</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">张桂毓</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">33</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">刘泽泉</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">34</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">李岳元</td>
+<td class="org-right">35</td>
 <td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">周永久</td>
+<td class="org-right">36</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">麦天河</td>
+<td class="org-right">37</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">刘翔</td>
+<td class="org-right">38</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">沈艺宏</td>
+<td class="org-right">39</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">王海波</td>
+<td class="org-right">40</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">苏大明</td>
+<td class="org-right">41</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1246,20 +1253,13 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">卢德涛</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
 </tbody>
 </table>
 
 
 <details><summary>history score</summary>
 
-<table id="orgfde0603">
+<table id="org17e9bdf">
 
 
 <colgroup>
