--- a/190/index.html
+++ b/190/index.html
@@ -22,23 +22,24 @@
 <ul>
 <li><a href="#org14957c5">1. 笔记</a>
 <ul>
-<li><a href="#orgb55aec3">1.1. 2024-04-22 09:05:41</a></li>
-<li><a href="#org74344e3">1.2. 2024-04-15 09:58:59</a></li>
-<li><a href="#org4a83b52">1.3. 2024-04-10 10:34:21</a></li>
-<li><a href="#org0c20197">1.4. 2024-04-08 08:44:08</a></li>
-<li><a href="#org4963414">1.5. 2024-04-03 10:34:53</a></li>
-<li><a href="#orgc0f7781">1.6. 2024-04-01 09:01:09</a></li>
-<li><a href="#orga282cb6">1.7. 2024-03-27 10:33:05</a></li>
-<li><a href="#orge5308c9">1.8. 2024-03-25 14:58:22</a></li>
-<li><a href="#orgf1ae66e">1.9. 2024-03-18 09:55:03</a></li>
-<li><a href="#orgb435766">1.10. 2024-03-13 11:01:46</a></li>
-<li><a href="#org8cbbc25">1.11. 2024-03-11 14:52:05</a></li>
-<li><a href="#org484b6e1">1.12. 2024-03-11 08:30:00</a></li>
-<li><a href="#org8452469">1.13. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org82189a0">1.14. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org9e9b6ae">1.15. 2023-12-28 (任务)</a></li>
-<li><a href="#org0a2cf87">1.16. 2023-10-30 (任务)</a></li>
-<li><a href="#orgf5f6210">1.17. 2023-09-07 (任务)</a></li>
+<li><a href="#org8a2f42a">1.1. 2024-04-22 09:51:08</a></li>
+<li><a href="#orgb55aec3">1.2. 2024-04-22 09:05:41</a></li>
+<li><a href="#org74344e3">1.3. 2024-04-15 09:58:59</a></li>
+<li><a href="#org4a83b52">1.4. 2024-04-10 10:34:21</a></li>
+<li><a href="#org0c20197">1.5. 2024-04-08 08:44:08</a></li>
+<li><a href="#org4963414">1.6. 2024-04-03 10:34:53</a></li>
+<li><a href="#orgc0f7781">1.7. 2024-04-01 09:01:09</a></li>
+<li><a href="#orga282cb6">1.8. 2024-03-27 10:33:05</a></li>
+<li><a href="#orge5308c9">1.9. 2024-03-25 14:58:22</a></li>
+<li><a href="#orgf1ae66e">1.10. 2024-03-18 09:55:03</a></li>
+<li><a href="#orgb435766">1.11. 2024-03-13 11:01:46</a></li>
+<li><a href="#org8cbbc25">1.12. 2024-03-11 14:52:05</a></li>
+<li><a href="#org484b6e1">1.13. 2024-03-11 08:30:00</a></li>
+<li><a href="#org8452469">1.14. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org82189a0">1.15. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org9e9b6ae">1.16. 2023-12-28 (任务)</a></li>
+<li><a href="#org0a2cf87">1.17. 2023-10-30 (任务)</a></li>
+<li><a href="#orgf5f6210">1.18. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#orga1a6079">2. 任务结果</a></li>
@@ -55,9 +56,85 @@
 <h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgb55aec3" class="outline-3">
-<h3 id="orgb55aec3"><span class="section-number-3">1.1.</span> 2024-04-22 09:05:41</h3>
+<div id="outline-container-org8a2f42a" class="outline-3">
+<h3 id="org8a2f42a"><span class="section-number-3">1.1.</span> 2024-04-22 09:51:08</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+猜数字的参考代码:
+</p>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">cishu</span> = 0;
+<span class="linenr"> 2: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">zhenzhengdeshuzi</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Random</span><span style="color: #000000;">()</span>.<span style="color: #721045;">Next</span><span style="color: #000000;">(</span>1, 20<span style="color: #000000;">)</span>;
+<span class="linenr"> 3: </span>
+<span class="linenr"> 4: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">skdjfksdjkf</span><span style="color: #000000;">()</span>
+<span class="linenr"> 5: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 6: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">0. &#35745;&#25968;</span>
+<span class="linenr"> 7: </span>    cishu = cishu + 1;
+<span class="linenr"> 8: </span>
+<span class="linenr"> 9: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">1. &#25552;&#21462;&#29992;&#25143;&#36755;&#20837;&#65292;&#24182;&#36716;&#25442;&#20026;&#25968;&#23383;</span>
+<span class="linenr">10: </span>    <span style="color: #005a5f;">int</span> <span style="color: #00538b;">caideshuzi</span> = <span style="color: #005a5f;">int</span>.<span style="color: #721045;">Parse</span><span style="color: #a8007f;">(</span>shuziBox.Text<span style="color: #a8007f;">)</span>;
+<span class="linenr">11: </span>
+<span class="linenr">12: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">2. &#23558;&#29992;&#25143;&#36755;&#20837;&#30340;&#25968;&#23383;&#65292;&#36319;&#19978;&#38754;&#30340;&#30495;&#27491;&#30340;&#25968;&#23383;&#36827;&#34892;&#27604;&#23545;&#12290;&#24182;&#36755;&#20986;</span>
+<span class="linenr">13: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>caideshuzi &gt; zhenzhengdeshuzi<span style="color: #a8007f;">)</span>
+<span class="linenr">14: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">15: </span>        BackColor = Color.Red;
+<span class="linenr">16: </span>        jieguoLabel.Text = <span style="color: #2544bb;">"&#39640;&#20102;"</span>;
+<span class="linenr">17: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">18: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>caideshuzi &lt; zhenzhengdeshuzi<span style="color: #a8007f;">)</span>
+<span class="linenr">19: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">20: </span>        BackColor = Color.Blue;
+<span class="linenr">21: </span>        jieguoLabel.Text = <span style="color: #2544bb;">"&#20302;&#20102;"</span>;
+<span class="linenr">22: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">23: </span>    <span style="color: #5317ac;">else</span>
+<span class="linenr">24: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">25: </span>        BackColor = Color.Green;
+<span class="linenr">26: </span>        jieguoLabel.Text = $<span style="color: #2544bb;">"&#24685;&#21916;&#20320;&#65292;&#20320;&#19968;&#20849;&#29468;&#20102; {cishu} &#27425;"</span>;
+<span class="linenr">27: </span>        <span style="color: #505050;">//</span><span style="color: #505050;">shuziBox.Enabled = false;</span>
+<span class="linenr">28: </span>        shuziBox.ReadOnly = <span style="color: #0000c0;">true</span>;
+<span class="linenr">29: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">30: </span>
+<span class="linenr">31: </span>    shuziBox.<span style="color: #721045;">Focus</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">32: </span>    shuziBox.<span style="color: #721045;">SelectAll</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">33: </span><span style="color: #000000;">}</span>
+<span class="linenr">34: </span>
+<span class="linenr">35: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">caiButton_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">36: </span><span style="color: #000000;">{</span>
+<span class="linenr">37: </span>    <span style="color: #721045;">skdjfksdjkf</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">38: </span><span style="color: #000000;">}</span>
+<span class="linenr">39: </span>
+<span class="linenr">40: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">shuziBox_KeyUp</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">KeyEventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">41: </span><span style="color: #000000;">{</span>
+<span class="linenr">42: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Enter<span style="color: #a8007f;">)</span>
+<span class="linenr">43: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">44: </span>        <span style="color: #721045;">skdjfksdjkf</span><span style="color: #005f88;">()</span>;
+<span class="linenr">45: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">46: </span><span style="color: #000000;">}</span>
+<span class="linenr">47: </span>
+<span class="linenr">48: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">newBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">49: </span><span style="color: #000000;">{</span>
+<span class="linenr">50: </span>    BackColor = SystemColors.Control;
+<span class="linenr">51: </span>    jieguoLabel.Text = <span style="color: #2544bb;">""</span>;
+<span class="linenr">52: </span>    shuziBox.ReadOnly = <span style="color: #0000c0;">false</span>;
+<span class="linenr">53: </span>    shuziBox.Text = <span style="color: #2544bb;">""</span>;
+<span class="linenr">54: </span>    zhenzhengdeshuzi = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Random</span><span style="color: #a8007f;">()</span>.<span style="color: #721045;">Next</span><span style="color: #a8007f;">(</span>1, 20<span style="color: #a8007f;">)</span>;
+<span class="linenr">55: </span>    cishu = 0;
+<span class="linenr">56: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+
+<p>
+优化空间:
+</p>
+<ul class="org-ul">
+<li>如果猜对了，不应该继续点击“猜一猜”</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-orgb55aec3" class="outline-3">
+<h3 id="orgb55aec3"><span class="section-number-3">1.2.</span> 2024-04-22 09:05:41</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 温度转换参考代码:
 </p>
@@ -104,8 +181,8 @@
 </div>
 
 <div id="outline-container-org74344e3" class="outline-3">
-<h3 id="org74344e3"><span class="section-number-3">1.2.</span> 2024-04-15 09:58:59</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org74344e3"><span class="section-number-3">1.3.</span> 2024-04-15 09:58:59</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 实现课本上的猜数字的游戏。21 页
 </p>
@@ -113,8 +190,8 @@
 </div>
 
 <div id="outline-container-org4a83b52" class="outline-3">
-<h3 id="org4a83b52"><span class="section-number-3">1.3.</span> 2024-04-10 10:34:21</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org4a83b52"><span class="section-number-3">1.4.</span> 2024-04-10 10:34:21</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 实现一个温度转换程序。要求能够将华氏温度转换为摄氏温度。
 </p>
@@ -124,7 +201,7 @@
 </p>
 
 
-<figure id="org7a4bc51">
+<figure id="org8bb232f">
 <img src="img/oimg_20240410_103855.png" alt="oimg_20240410_103855.png">
 
 </figure>
@@ -133,8 +210,8 @@
 
 
 <div id="outline-container-org0c20197" class="outline-3">
-<h3 id="org0c20197"><span class="section-number-3">1.4.</span> 2024-04-08 08:44:08</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org0c20197"><span class="section-number-3">1.5.</span> 2024-04-08 08:44:08</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 另一个定时器的例子，倒计时:
 </p>
@@ -175,8 +252,8 @@
 </div>
 
 <div id="outline-container-org4963414" class="outline-3">
-<h3 id="org4963414"><span class="section-number-3">1.5.</span> 2024-04-03 10:34:53</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org4963414"><span class="section-number-3">1.6.</span> 2024-04-03 10:34:53</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 小测验:
 </p>
@@ -197,8 +274,8 @@
 </div>
 
 <div id="outline-container-orgc0f7781" class="outline-3">
-<h3 id="orgc0f7781"><span class="section-number-3">1.6.</span> 2024-04-01 09:01:09</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="orgc0f7781"><span class="section-number-3">1.7.</span> 2024-04-01 09:01:09</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 时钟程序实例:
 </p>
@@ -222,8 +299,8 @@
 </div>
 
 <div id="outline-container-orga282cb6" class="outline-3">
-<h3 id="orga282cb6"><span class="section-number-3">1.7.</span> 2024-03-27 10:33:05</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="orga282cb6"><span class="section-number-3">1.8.</span> 2024-03-27 10:33:05</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 一个窗体中有很多图形元素，这些称为控件 (Control)。
 </p>
@@ -295,8 +372,8 @@
 </div>
 
 <div id="outline-container-orge5308c9" class="outline-3">
-<h3 id="orge5308c9"><span class="section-number-3">1.8.</span> 2024-03-25 14:58:22</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="orge5308c9"><span class="section-number-3">1.9.</span> 2024-03-25 14:58:22</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 课本第 5 页，事件。
 </p>
@@ -383,8 +460,8 @@
 </div>
 
 <div id="outline-container-orgf1ae66e" class="outline-3">
-<h3 id="orgf1ae66e"><span class="section-number-3">1.9.</span> 2024-03-18 09:55:03</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="orgf1ae66e"><span class="section-number-3">1.10.</span> 2024-03-18 09:55:03</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 接下来进行练习:
 </p>
@@ -411,8 +488,8 @@
 </div>
 
 <div id="outline-container-orgb435766" class="outline-3">
-<h3 id="orgb435766"><span class="section-number-3">1.10.</span> 2024-03-13 11:01:46</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="orgb435766"><span class="section-number-3">1.11.</span> 2024-03-13 11:01:46</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 为 BMI 计算器增加身体状况的判断和显示。
 </p>
@@ -457,8 +534,8 @@
 </div>
 
 <div id="outline-container-org8cbbc25" class="outline-3">
-<h3 id="org8cbbc25"><span class="section-number-3">1.11.</span> 2024-03-11 14:52:05</h3>
-<div class="outline-text-3" id="text-1-11">
+<h3 id="org8cbbc25"><span class="section-number-3">1.12.</span> 2024-03-11 14:52:05</h3>
+<div class="outline-text-3" id="text-1-12">
 <p>
 请大家保持安静，谢谢合作。
 </p>
@@ -500,7 +577,7 @@
 </p>
 
 
-<figure id="orgca482d6">
+<figure id="org83dd811">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -524,8 +601,8 @@
 </div>
 
 <div id="outline-container-org484b6e1" class="outline-3">
-<h3 id="org484b6e1"><span class="section-number-3">1.12.</span> 2024-03-11 08:30:00</h3>
-<div class="outline-text-3" id="text-1-12">
+<h3 id="org484b6e1"><span class="section-number-3">1.13.</span> 2024-03-11 08:30:00</h3>
+<div class="outline-text-3" id="text-1-13">
 <p>
 Winform 项目，VS 界面:
 </p>
@@ -583,8 +660,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org8452469" class="outline-3">
-<h3 id="org8452469"><span class="section-number-3">1.13.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-13">
+<h3 id="org8452469"><span class="section-number-3">1.14.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-14">
 <p>
 做一个求取 BMI 的控制台应用:
 </p>
@@ -611,8 +688,8 @@ Winform 项目，VS 界面:
 
 
 <div id="outline-container-org82189a0" class="outline-3">
-<h3 id="org82189a0"><span class="section-number-3">1.14.</span> 2024-01-15 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-14">
+<h3 id="org82189a0"><span class="section-number-3">1.15.</span> 2024-01-15 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-15">
 <table>
 
 
@@ -1086,8 +1163,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org9e9b6ae" class="outline-3">
-<h3 id="org9e9b6ae"><span class="section-number-3">1.15.</span> 2023-12-28 (任务)</h3>
-<div class="outline-text-3" id="text-1-15">
+<h3 id="org9e9b6ae"><span class="section-number-3">1.16.</span> 2023-12-28 (任务)</h3>
+<div class="outline-text-3" id="text-1-16">
 <p>
 使用控制台实现点名的功能。
 </p>
@@ -1099,8 +1176,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org0a2cf87" class="outline-3">
-<h3 id="org0a2cf87"><span class="section-number-3">1.16.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-16">
+<h3 id="org0a2cf87"><span class="section-number-3">1.17.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-17">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -1108,8 +1185,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-orgf5f6210" class="outline-3">
-<h3 id="orgf5f6210"><span class="section-number-3">1.17.</span> 2023-09-07 (任务)</h3>
-<div class="outline-text-3" id="text-1-17">
+<h3 id="orgf5f6210"><span class="section-number-3">1.18.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-18">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
 </p>
@@ -1120,7 +1197,7 @@ Winform 项目，VS 界面:
 <section id="outline-container-orga1a6079" class="outline-2">
 <h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org92e246d">
+<table id="org9126b88">
 
 
 <colgroup>
@@ -1543,7 +1620,7 @@ Winform 项目，VS 界面:
 
 
 <details><summary>history scores</summary>
-<table id="org9126b88">
+<table id="org3e80c74">
 
 
 <colgroup>
